# LLM2205

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/orchestrator/: Dockerfile  pyproject.toml
apps/orchestrator/app/: config.py  db.py  llm_client.py  main.py  models.py  schemas.py  web_search.py
apps/orchestrator/app/routes/: chat.py  conversations.py
apps/orchestrator/app/static/: app.js  styles.css
apps/orchestrator/app/templates/: index.html
apps/orchestrator/tests/: conftest.py  test_conversations.py  test_health.py  test_usage.py  test_web_search.py
prompts/: system_prompt.md
scripts/: test_chat.sh
